tests/diag/dym_proc.ty
fn total(x: int) -> int:
    return x
fn main():
    print(str(totl(3)))
